# StreamLiner

./: 1python3  Dockerfile  README.md  custom.yaml  docs.html  ecs_output.json  features.html  index.html  pricing.html  pyproject.toml  syslog_test.ini  test_file_tailing.ini  test_streamliner.py
docs/: USAGE.md
docs/schemas/: ECS.md
examples/: custom_mapping.yaml  file_tailing_example.ini  streamliner.ini  streamliner_full.ini
src/: main.py
src/config/: loader.py
src/connectors/: elastic.py  elasticsearch.py  opensearch.py
src/inputs/: file_input.py  syslog_input.py
src/parsers/: dummy.py  ecs_parser.py  json_parser.py  regex_parser.py
src/schemas/: ecs.py  yaml_mapper.py
tests/: test_basic.py  test_connectors.py  test_parsers.py
