
---

### 4. `pyproject.toml`
```toml
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "streamliner"
version = "0.1.0"
description = "Universal Log Parser for Any SIEM"
authors = [{name="Tamir Suliman"}]
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
    "PyYAML>=6.0"
]
requires-python = ">=3.9"

[project.scripts]
streamliner = "streamliner.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
